Added Projects and Tags page

--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,20 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "default", "dirt", "neon", "mint", "plum", "sunrise", "dark"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "default", "dirt", "neon", "mint", "plum", "sunrise", "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jay Chakalasiya"
+title                    : &name "Jay Chakalasiya"
 title_separator          : "|"
 subtitle                 : "Thnkspc for starshots"# site tagline that appears below site title in masthead""
 name                     : "Jay Chakalasiya"
-description              : "An amazing website."
+description              : "Personal Thinkspace for the Ideas"
 url                      : "https://jay-chakalasiya.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jay-chakalasiya/jay-chakalasiya.github.io"
-teaser                   : "/images/sample.jpg"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "/assets/images/sample.jpg"
+logo                     : "/assets/images/logo-greenearth.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jay Chakalasiya"
+  name             : *name
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "What is **life** without **death**?"
   location         : "Bellevue, WA"
@@ -101,13 +101,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url : "mailto:chakalasiyajay00@email.com"
+      url : &email "mailto:chakalasiyajay00@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://jaychakalasiya.com"
+      url: &website "https://jaychakalasiya.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url : "https://twitter.com/JayChakalasiya"
+      url : &twitter "https://twitter.com/JayChakalasiya"
     #- label: "Facebook"
      # icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -266,6 +266,15 @@ compress_html:
     envs: development
 
 
+collections:
+  projects:
+    output: true
+    permalink: /:collection/:path
+  posts:
+    output: true
+    permalink: /:collection/:path
+
+
 # Defaults
 defaults:
   # _posts
@@ -280,3 +289,10 @@ defaults:
       share: true
       related: true
       show_date: true
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share:  true
