--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
-Billy Rick:
+Jay Chakalasiya:
   name        : "Jay Chakalasiya"
   bio         : "What do you want, jewels? I am a very extravagant man."
   avatar      : #"/assets/images/bio-photo-2.jpg"
