--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -8,10 +8,10 @@ en: &DEFAULT_EN
   skip_content               : "Skip to content"
   skip_footer                : "Skip to footer"
   page                       : "Page"
-  pagination_previous        : "Previous"
-  pagination_next            : "Next"
-  breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : ">"
+  pagination_previous        : "<"
+  pagination_next            : ">"
+  breadcrumb_home_label      : "Root"
+  breadcrumb_separator       : "/"
   menu_label                 : "Toggle menu"
   search_label               : "Toggle search"
   toc_label                  : "On this page"
