--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,17 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Posts"
-    url: /year-archive/
-  - title: "Categories"
-    url: /categories/
+    url: /posts/
   - title: "Tags"
     url: /tags/
   - title: "Pages"
     url: /page-archive/
-  - title: "Collections"
-    url: /collection-archive/
+  - title: "Projects"
+    url: /projects/
   - title: "External Link"
     url: https://google.com
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "About"
+    url: /about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
