--- a/_config.yml
+++ b/_config.yml
@@ -51,17 +51,17 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
-search_provider          : # lunr (default), algolia, google
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
+search_provider          : google # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
-  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
-  instant_search         : # false (default), true
+  search_engine_id       : d2a5b127a9cca47b0 # YOUR_SEARCH_ENGINE_ID
+  instant_search         : true # false (default), true
 # SEO Related
 google_site_verification :
 bing_site_verification   :
@@ -270,9 +270,6 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path
-  posts:
-    output: true
-    permalink: /:collection/:path
 
 
 # Defaults
@@ -282,17 +279,51 @@ defaults:
       path: ""
       type: posts
     values:
+
       layout: single
       author_profile: true
+
       read_time: true
       comments: # true
       share: true
       related: true
       show_date: true
+
+      search: true
+
+      toc:  true
+      toc_label:  "Table of Contents"
+      toc_icon: "fas fa-scroll"
+
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: /assets/images/sample.jpg
+      excerpt: "Please Add a Good Excerpt Here"
+
   - scope:
       path: ""
       type: projects
     values:
-      layout: single
-      author_profile: false
-      share:  true
+      layout: splash
+      author_profile: true
+
+      read_time: true
+      comments: # true
+      share: true
+      related: true
+      show_date: true
+
+      search: true
+
+      toc: true
+      toc_label: "Table of Contents"
+      toc_icon: "fas fa-scroll"
+
+      header:
+        overlay_color: "#000"
+        overlay_filter: "0.5"
+        overlay_image: /assets/images/sample.jpg
+
+      excerpt: "Please Add a Good Excerpt Here"
+
