--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,11 @@
 # main links
 main:
   - title: "Posts"
-    url: /posts/
-  - title: "Tags"
-    url: /tags/
-  - title: "Pages"
-    url: /page-archive/
+    url: /
   - title: "Projects"
     url: /projects/
-  - title: "External Link"
-    url: https://google.com
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
