--- a/_config.yml
+++ b/_config.yml
@@ -242,10 +242,10 @@ whitelist:
 #  - <base_path>/my-awesome-category/index.html ~> path: /
 category_archive:
   type: liquid
-  path: /posts-categories/
+  path: /collections/
 tag_archive:
   type: liquid
-  path: /posts-tags/
+  path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
