Added Navigation link for resume

--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,6 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url : &email "mailto:chakalasiyajay00@email.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: &website "https://jaychakalasiya.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jay-chakalasiya"
@@ -114,6 +111,8 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url : &twitter "https://twitter.com/JayChakalasiya"
+    - label: "Resume"
+      url : "/resume/"
     #- label: "Facebook"
      # icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
