--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /
   - title: "Projects"
     url: /projects/
+  - title: "Resume"
+    url: /digital-resume/
 
   # - title: "Sample Posts"
   #   url: /year-archive/
