--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://jay-chakalasiya.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jay-chakalasiya/jay-chakalasiya.github.io"
 teaser                   : "/assets/images/defaults/default-teaser.jpg"
-logo                     : "/assets/images/logos/earth.png"
+logo                     : "/assets/images/logos/earth.gif"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
